Many bugfixes and improvements. Bugfix to spIrcClient::socketReadLine() dropping lines correctly in some cases.  Now entire MOTD displays. Bugfix ircweb2init.php partly rewritten to handle connection testing (connect=0) properly without affecting session state. Bugfix to ircweb2recv.php to set maximum message processing per call.  Prevents accidental endless loop of message parsing. Bugfix RPL_TIME response fixed in spIrcClient::parseMsg(). Improved error logging with static 'log' class that forwards to error_log with associated script file. CSS updated with white-space:pre-wrap in .ircChannel so that a series of spaces will display verbatim, instead of being condensed to single space. Some unwanted commented out code removed.

--- a/ircweb2.css
+++ b/ircweb2.css
@@ -5,6 +5,7 @@ BODY {
 .ircChannel {
     overflow: auto;
     font: 12px Tahoma, Helvetica, sans-serif;
+    white-space: pre-wrap;
 }
 
 #commandBar {
